Strapi&Mongo/01-mongo-svc.yaml
apiVersion: v1
kind: Service
metadata:
 name: mongo-svc
 labels:
   app: mongo
spec:
 ports:
 - port: 27017
 clusterIP: None
 selector:
   role: mongo
