Strapi&Mongo/03-strapi-svc.yaml
apiVersion: v1
kind: Service
metadata:
  name: strapi-lb
spec:
  type: LoadBalancer
  externalTrafficPolicy: Local
  ports:
    - protocol: TCP
      port: 80
      targetPort: 1337
  selector:
    app: strapi
status:
  loadBalancer: 
    ingress:
    - ip: 172.17.0.2
