Strapi&Mongo/04-strapi-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: ejemplo.com
    http:
      paths:
      - path: /strapi
        backend:
          serviceName: strapi-svc
          servicePort: 1337
